[workspace]
members = ["common", "programmable-transactions-rust", "single-gas-coin-transaction"]

[workspace.dependencies]
# Using a fork as vanilla sdk does not yet support dev_inspect (PR opened)
sui-sdk = { git = "https://github.com/mrgnresearch/sui.git", branch = "man0s/rust-sdk-dev-inspect" }
sui-types = { git = "https://github.com/mrgnresearch/sui.git", branch = "man0s/rust-sdk-dev-inspect" }
bcs = "0.1.4"

anyhow = "1"
tokio = { version = "1" }
serde = "1"